# vn-legal-rag

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  results_3.json  results_4.json
config/: default.yaml
config/domains/: 01-2021-ND.yaml  16-2023-ND.yaml  168-2025-ND.yaml  23-2022-ND.yaml  248-2025-ND.yaml  44-2025-ND.yaml  47-2021-ND.yaml  59-2020-QH14.yaml  65-2022-ND.yaml  89-2024-ND.yaml
data/: README.md  debug_results.json  discovered_relation_types.json
data/kg_enhanced/: ontology.json  ontology.ttl
data/ontologies/base/: legal-core.owl  legal-core.ttl
data/ontologies/merged/: active.ttl
docs/: README.md  code-standards-testing-deps-security-guide.md  code-standards.md  codebase-summary.md  knowledge-representation-model-definition.md  project-overview-pdr.md  project-roadmap.md  system-architecture-operations-guide.md  system-architecture.md
paper/: SOMET2026-Research.md  paper-v2.tex  paper-v3.tex  paper.tex
plans/reports/: docs-manager-260214-2326-initial-documentation-complete.md  docs-manager-260216-1029-documentation-updates.md  fullstack-developer-260214-0943-offline-phase-refactor.md  fullstack-developer-260214-0943-types-and-utils-refactoring.md  fullstack-developer-260214-0944-data-config-copy-completion.md  fullstack-developer-260214-0944-online-phase-refactor.md  fullstack-developer-260214-0954-entry-point-scripts-creation.md  fullstack-developer-260214-0955-package-setup-readme-pyproject.md  scout-260214-1132-compare-vn-legal-rag-vs-semantica.md  scout-260214-2230-online-phase-comparison.md  scout-260214-2311-online-phase-comparison.md  scout-260215-0031-online-phase-comparison.md  scout-260215-1239-semantica-rag-benchmarks-index.md  scout-260215-1239-semantica-rag-benchmarks.md
scripts/: README.md  evaluate-retrieval-performance-on-test-set.py  offline-kg-extraction-with-checkpoint-resume.py  online-interactive-legal-qa-system.py  run-complete-offline-pipeline.py  run-full-training-test.py
tests/: test-online-module-imports.py
vn_legal_rag/: __init__.py
vn_legal_rag/offline/: __init__.py  abbreviation_extractor.py  crossref-postprocessor-for-llm-extracted-relations.py  crossref_detector.py  database_manager.py  deduplicator.py  document_filter.py  entity-resolver-for-deduplication.py  entity_profiler.py  entity_types.py  incremental-kg-updater-for-new-documents.py  incremental_knowledge_graph_builder.py  kg-sqlite-bidirectional-linker.py  legal-ontology-generator.py  models.py  ontology-class-hierarchy-builder.py  ontology-evaluator-for-quality-assessment.py  ontology-pellet-reasoner-integration.py  ontology-validator-for-kg-consistency.py  ontology-version-manager.py  relation-validator-for-kg-pipeline.py  relation_types.py  synonym-miner-from-qa-corpus.py  terminology-extractor-from-legal-articles.py  theme_extractor.py  type_mapper.py  unified_entity_relation_extractor.py
vn_legal_rag/offline/scraper/: __init__.py  base-legal-scraper.py  legal-hierarchy-extractor.py  tvpl-legal-scraper.py
vn_legal_rag/offline/summary/: __init__.py  article-summary-generator.py  chapter-summary-generator.py  document-summary-generator.py
vn_legal_rag/online/: __init__.py  cross-encoder-reranker-for-legal-documents.py  document-aware-result-filter.py  dual-level-retriever.py  legal-graphrag-3tier-query-engine.py  ontology-based-query-expander.py  personalized-page-rank-for-kg.py  semantic-bridge-rrf-merger.py  tree-traversal-retriever.py  vietnamese-legal-query-analyzer.py  vietnamese-nlp-term-matcher.py
vn_legal_rag/types/: __init__.py  ablation-config-for-rag-component-testing.py  entity_types.py  relation_types.py  tree_models.py
vn_legal_rag/utils/: __init__.py  basic_llm_provider.py  config-loader-with-yaml-support.py  data-loaders-for-kg-and-summaries.py  legal_citation_formatter.py  llm_provider_with_caching.py  simple-progress-tracker-for-testing.py  simple_logger.py  text_embeddings_provider.py  tree-index-builder-from-db.py  vietnamese_abbreviation_expander.py
